# dusklight

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  files.cmake  fix-cmake-paths.patch  flake.nix  ios.toolchain.cmake
.github/workflows/: build.yml
cmake/: AndroidExports.cmake  AppleExports.cmake  CopyModAssets.cmake  DetectVersion.cmake  DuskModSDK.cmake  GameABIConfig.cmake  ModSDK.cmake  PatchCapstone.cmake  PatchFunchook.cmake  SymbolManifest.cmake  WindowsExports.cmake
docs/: modding.md
include/: DynamicLink.h  global.h  os_report.h
include/Z2AudioLib/: Z2Audience.h  Z2AudioMgr.h  Z2Calc.h  Z2EnvSeMgr.h  Z2LinkMgr.h  Z2Param.h  Z2SeqMgr.h  Z2SoundObjMgr.h  Z2SoundObject.h
include/c/: c_damagereaction.h
include/d/: d_a_item_static.h  d_a_shop_item_static.h  d_attention.h  d_bg_parts.h  d_bg_s_acch.h  d_bg_s_movebg_actor.h  d_bg_w.h  d_bg_w_kcol.h  d_camera.h  d_cc_d.h  d_cc_s.h  d_com_inf_actor.h  d_com_inf_game.h  d_debug_pad.h  d_demo.h  d_drawlist.h  d_event_data.h  d_event_manager.h  d_eye_hl.h  d_item.h  d_item_data.h  d_k_wmark.h  d_kankyo.h  d_kankyo_wether.h  d_lib.h  d_map.h  d_map_path.h  d_map_path_dmap.h  d_menu_collect.h  d_menu_dmap.h  d_menu_dmap_map.h  d_menu_fmap.h  d_menu_fmap_map.h  d_menu_option.h  d_menu_ring.h  d_menu_window_HIO.h  d_meter2_info.h  d_meter_HIO.h  d_model.h  d_msg_class.h  (+15 more)
include/dusk/: action_bindings.h  config.hpp  config_var.hpp  dvd_asset.hpp  gx_helper.h  io.hpp  main.h  menu_pointer.h  mod_loader.hpp  mouse.h  profiling.hpp  settings.h  texture_replacements.hpp
include/f_ap/: f_ap_game.h
include/f_op/: f_op_actor.h  f_op_actor_mng.h  f_op_actor_tag.h  f_op_camera.h  f_op_draw_tag.h  f_op_kankyo.h  f_op_msg.h  f_op_overlap.h  f_op_scene.h  f_op_scene_tag.h  f_op_view.h
include/f_pc/: f_pc_base.h  f_pc_create_tag.h  f_pc_delete_tag.h  f_pc_leaf.h  f_pc_line.h  f_pc_node.h  f_pc_node_req.h  (+2 more)
sdk/: CMakeLists.txt  pseudo_reloc.cpp
sdk/include/mods/: api.h  hook.hpp  meta.hpp  service.hpp
sdk/include/mods/svc/: camera.h  config.h  game.h  gamemode.h  gfx.h  hook.h  host.h  log.h  overlay.h  resource.h  texture.h  ui.h
sdk/src/: game_feature.cpp
src/: DynamicLink.cpp
tools/overlay_template/: CMakeLists.txt  mod.json
(+1071 files in other folders)
